crates/ferrum-interfaces/tests/ui/vnext/fail/unvalidated_failure_envelope_is_not_deserialize.rs
use ferrum_interfaces::vnext::UnvalidatedFailureEnvelope;

fn main() {
    let _: UnvalidatedFailureEnvelope = serde_json::from_str("{}").unwrap();
}
